added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>My first Github Repo</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe labore iusto aliquam quisquam praesentium voluptate iste tenetur velit similique! Eius repellendus rerum veritatis tenetur animi unde, eaque itaque! Corporis, optio.</p>
+
+    </div>
 </body>
 </html>
