--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe labore iusto aliquam quisquam praesentium voluptate iste tenetur velit similique! Eius repellendus rerum veritatis tenetur animi unde, eaque itaque! Corporis, optio.</p>
 
     </div>
+    <div>
+        <h2>My second Github Repo</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe labore iusto aliquam quisquam praesentium voluptate iste tenetur velit similique! Eius repellendus rerum veritatis tenetur animi unde, eaque itaque! Corporis, optio.</p>
+
+    </div>
+    <div>
+        <h2>My third Github Repo</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe labore iusto aliquam quisquam praesentium voluptate iste tenetur velit similique! Eius repellendus rerum veritatis tenetur animi unde, eaque itaque! Corporis, optio.</p>
+
+    </div>
 </body>
 </html>
