added a list to push code

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe labore iusto aliquam quisquam praesentium voluptate iste tenetur velit similique! Eius repellendus rerum veritatis tenetur animi unde, eaque itaque! Corporis, optio.</p>
 
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ol>
+            <li>git add</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
