add my first pic

--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
             <li>git push</li>
         </ol>
     </div>
+    <div>
+        <h3>Mohiner Adi Ghora</h3>
+        <img src="img/MV5BNmQ0MTBhZWEtMDViZC00ZjE1LTgyZWUtMTFmMmVkNjAyYmU2XkEyXkFqcGdeQXVyNzI1NTc1NjA@._V1_FMjpg_UX1000_.jpg" alt="">
+    </div>
 </body>
 </html>
